// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Card component should render correctly with all the default props 1`] = `
.c1 {
  font-size: 14px;
  font-weight: 400;
  color: inherit;
}

.c0 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  width: 250px;
  height: 250px;
  background-color: #ffffff;
  border-radius: 4px;
  box-shadow: 0 2px 4px 0 rgba(0,0,0,0.5);
  padding: 10px;
  border: 1px solid #F9F9F9;
}

<div>
  <div
    class="c0"
  >
    <span
      class="c1"
    >
      Dummy Text
    </span>
  </div>
</div>
`;

exports[`Card component should render correctly with all the props given 1`] = `
.c1 {
  font-size: 14px;
  font-weight: 400;
  color: inherit;
}

.c0 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  width: 100px;
  height: 100px;
  background-color: #ffffff;
  border-radius: 4px;
  box-shadow: 0 2px 4px 0 rgba(0,0,0,0.5);
  padding: 10px;
  border: 1px solid #F9F9F9;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

<div>
  <div
    class="c0"
    height="100px"
    width="100px"
  >
    <span
      class="c1"
    >
      Dummy Text
    </span>
  </div>
</div>
`;
